# CPPPrimerPlus

./: .gitignore  README.md  employees.txt  english.txt  guests.txt  kali.tx  kali.txt  kali.txt1  kali.txt3  test_kali.tx
bookcase/chapter10/: stack.cpp  stack.h  stacker.cpp  stock00.cpp  stock00.h  stock10.cpp  stock10.h  stock20.cpp  stock20.h  usesstock0.cpp  usestock1.cpp  usestock2.cpp
bookcase/chapter11/: mytime1.cpp  mytime1.h  mytime2.cpp  mytime2.h  mytime3.cpp  mytime3.h  randwalk.cpp  stone.cpp  stone1.cpp  stonewt.cpp  stonewt.h  stonewt1.h  usetime2.cpp  vector.cpp  vector.h
bookcase/chapter12/: bank.cpp  placenew1.cpp  placenew2.cpp  queue.cpp  queue.h  sayings1.cpp  sayings2.cpp  string1.cpp  string1.h  strngbad.cpp  strngbad.h  vegnews.cpp
bookcase/chapter13/: acctABC.cpp  acctabc.h  brass.cpp  brass.h  dma.cpp  dma.h  tabtenn0.cpp  tabtenn0.h  tabtenn1.cpp  tabtenn1.h  usebrass1.cpp  usebrass2.cpp  usebrass3.cpp  usedma.cpp  usett0.cpp  usett1.cpp
bookcase/chapter14/: Worker0.h  arraytp.h  frnd2tmp.cpp  manyfrnd.cpp  pairs.cpp  stackem.cpp  stacktp.h  stcktp1.h  stkoptr1.cpp  student.cpp  studentc.h  studenti.cpp  studenti.h  tempmemb.cpp  tempmemb1.cpp  tempparm.cpp  tmp2tmp.cpp  twod.cpp  use_stuc.cpp  use_stui.cpp  worker0.cpp  workermi.cpp  workermi.h  workertest.cpp  workmi.cpp
bookcase/chapter15/: constcast.cpp  error1.cpp  error2.cpp  error3.cpp  error4.cpp  error5.cpp  exc_mean.h  nested.cpp  newExceptionNullptr.cpp  newexcp.cpp  queuetp.h  rtti.cpp  rtti2.cpp  sales.cpp  sales.h  tv.cpp  tv.h  tvfm.h  use_sales.cpp  use_tv.cpp
bookcase/chapter16/: copyit.cpp  fowt.cpp  funadap.cpp  functor.cpp  hangman.cpp  ilist.cpp  inserts.cpp  list.cpp  listrmv.cpp  multimap.cpp  setops.cpp  smrtptrs.cpp  str1.cpp  str2.cpp  strfile.cpp  strgst1.cpp  usealgo.cpp  valvect.cpp  vect1.cpp  vect2.cpp  vect3.cpp  vslice.cpp
bookcase/chapter17/: append.cpp  binary.cpp  check_it.cpp  cinexcp.cpp  count.cpp  defaults.cpp  fileio.cpp  fill.cpp  get_gun.cpp  iomainp.cpp  manip.cpp  peeker.cpp  precise.cpp  random.cpp  setf.cpp  setf2.cpp  showpt.cpp  strin.cpp  strout.cpp  truncate.cpp  width.cpp  write.cpp
bookcase/chapter18/: callable.cpp  lambda0.cpp  lambda1.cpp  lexcast.cpp  rvref.cpp  somedefs.h  stdmove.cpp  useless.cpp  variadic1.cpp  variadic2.cpp  wrapped.cpp
bookcase/chapter2/: carrots.cpp  convert.cpp  getinfo.cpp  myfirst.cpp  ourfun.cpp  sqrt.cpp
make_prac/: CMakeLists.txt  main.cpp
make_prac/hello/: CMakeLists.txt  hello.cpp  hello.h  hello1.cpp  hello1.h
make_prac/tests/: CMakeLists.txt  test_hello.cpp  test_world.cpp
make_prac/world/: CMakeLists.txt  world.cpp  world.h
test/: 16_10_1.cpp  chatapi.cpp  chatgpt.cpp  test1.cpp  test_file_getline.cpp  test_order.cpp  testfun.cpp
testfile/: 11_9_1.txt  16_10_3.txt  test11.txt
todo/: Async.cpp  ProcessPool.cpp  ThreadsPool.cpp  cmake.txt  for_processDemo.cpp
tools/: PriceExchange  PriceExchange.cpp
(+347 files in other folders)
